fix date opacity in dark mode

--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -49,7 +49,7 @@
 
   .date {
     color: $dark-on-background;
-    opacity: 60%;
+    opacity: 0.60;
   }
 
   .blog-summary {
